main.tf
provider "azurerm" {
  features {}
  subscription_id      = "b5f306d2-971d-4c83-83c2-2c7b69f22671"
  tenant_id            = "9fead588-3912-437d-9b8d-03b1e59028d3"
  client_id            = "c4e75464-2e41-4080-bfe8-bdfdb1d243fc"
  client_secret        = "Ik78Q~m_u2KsVEYDNBUaVnT.XjEJmY-lXJhjKbbU"
}
resource "azurerm_resource_group" "myrg" {
  name     = "myrg-resources"
  location = "West Europe"
}

resource "azurerm_virtual_network" "w-vnet" {
  name                = "w-vent-network"
  address_space       = ["10.0.0.0/16"]
  location            = azurerm_resource_group.myrg.location
  resource_group_name = azurerm_resource_group.myrg.name
}

resource "azurerm_subnet" "w-subnet" {
  name                 = "w-subnet"
  resource_group_name  = azurerm_resource_group.myrg.name
  virtual_network_name = azurerm_virtual_network.w-vnet.name
  address_prefixes     = ["10.0.2.0/24"]
}

resource "azurerm_network_security_group" "w_nsg" {
  name                = "w_nsg"
  location            = azurerm_resource_group.myrg.location
  resource_group_name = azurerm_resource_group.myrg.name

  security_rule {
    name                       = "RDP"
    priority                   = 1000
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "*"
    source_port_range          = "*"
    destination_port_range     = "3389"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }
  security_rule {
    name                       = "web"
    priority                   = 1001
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "80"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }
}

resource "azurerm_public_ip" "w_ip" {
  name                = "w_ip"
  resource_group_name = azurerm_resource_group.myrg.name
  location            = azurerm_resource_group.myrg.location
  allocation_method   = "Dynamic"
}

resource "azurerm_network_interface" "w-nic" {
  name                = "w-nic"
  location            = azurerm_resource_group.myrg.location
  resource_group_name = azurerm_resource_group.myrg.name

 ip_configuration {
    name                          = "internal"
    subnet_id                     = azurerm_subnet.w-subnet.id
    private_ip_address_allocation = "Dynamic"
    public_ip_address_id          = azurerm_public_ip.w_ip.id
    
 }
}


resource "azurerm_windows_virtual_machine" "w-vm" {
  name                = "w-vm-machine"
  resource_group_name = azurerm_resource_group.myrg.name
  location            = azurerm_resource_group.myrg.location
  size                = "Standard_F2"
  admin_username      = "adminuser"
  admin_password      = "Password@123"
  network_interface_ids = [
    azurerm_network_interface.w-nic.id,
  ]

  os_disk {
    caching              = "ReadWrite"
    storage_account_type = "Standard_LRS"
  }

  source_image_reference {
    publisher = "MicrosoftWindowsServer"
    offer     = "WindowsServer"
    sku       = "2016-Datacenter"
    version   = "latest"
  }
}

resource "azurerm_virtual_machine_extension" "vm_extension_install_iis" {
  name                       = "vm_extension_install_iis"
  virtual_machine_id         = azurerm_windows_virtual_machine.w-vm.id
  publisher                  = "Microsoft.Compute"
  type                       = "CustomScriptExtension"
  type_handler_version       = "1.8"
  auto_upgrade_minor_version = true

  settings = <<SETTINGS
    {
        "commandToExecute":"powershell Install-WindowsFeature -name Web-Server -IncludeManagementTools"
    }
SETTINGS
}
